제목 앵커 제거

--- a/_posts/2009-03-12-레프트21홈페이지-이용안내-1-맑은-고딕-캠페인.md
+++ b/_posts/2009-03-12-레프트21홈페이지-이용안내-1-맑은-고딕-캠페인.md
@@ -23,7 +23,7 @@ tags:
 
 ## 맑은 고딕 설치 안내
 
-### 1. ‘맑은 고딕’ [<sup>1</sup>](#note-6-1 "윈도 Vista이전 버전에서는 맑은 고딕의 작은 글씨가 흐릿하게 보입니다. 이를 위해 맑은 고딕을 작은 사이즈에서도 선명하게 보려면 글꼴의 가장자리를 다듬는 방법을 ‘ClearType’으로 변경설정 해야 합니다!"){#return-note-6-1.simple-footnote}클리어 타입 **자동설치** 다운로드하기
+### 1. ‘맑은 고딕’ [<sup>1</sup>](#note-6-1 "윈도 Vista이전 버전에서는 맑은 고딕의 작은 글씨가 흐릿하게 보입니다. 이를 위해 맑은 고딕을 작은 사이즈에서도 선명하게 보려면 글꼴의 가장자리를 다듬는 방법을 ‘ClearType’으로 변경설정 해야 합니다!")클리어 타입 **자동설치** 다운로드하기
 
 아래의 링크를 클릭하시면 설치파일을 올려놓은 블로그 화면이 나옵니다. 오른쪽에 보시면 ‘첨부파일(1)’이라는 게 보이실 겁니다. 클릭! 하면 다운로드. 다운로드 후 파일을 실행시키면 설치가 완료됩니다.
 
