--- a/_posts/2009-04-07-자동-저장-문서.md
+++ b/_posts/2009-04-07-자동-저장-문서.md
@@ -71,7 +71,7 @@ tags:
   
 
 
-다시 1번으로 돌아가보죠. 페이지 설정창이 뜨죠? 이 창에서 원하시는 만큼의 [<sup>2</sup>](#note-36-2 "그림에서도 보실 수 있겠지만 용지크기, 머리글, 바닥글 등도 설정할 수 있답니다."){#return-note-36-2.simple-footnote}여백을 지정하시고(2.여백설정) 확인을 클릭하면 설정끝!(3.확인) 그리고 인쇄를 누르시면 되겠죠.(4.인쇄) 폰트를 바꾸거나, 소개해드린 것 이상의 설정을 원하신다면, 한글편집기를 사용하시는게 나을 겁니다. [<sup>3</sup>](#note-36-3 "더 세부적인 설정을 할 수 있도록 웨페이지에 기능을 추가하는 것에 대한 것도 고려했습니다. 하지만 그러기 위해서는 사용자들이 출력할 때 설치파일을 다운받고 설치를 하는 등의 너무 불필요한 과정도 필요하게 됩니다."){#return-note-36-3.simple-footnote}
+다시 1번으로 돌아가보죠. 페이지 설정창이 뜨죠? 이 창에서 원하시는 만큼의 [<sup>2</sup>](#note-36-2 "그림에서도 보실 수 있겠지만 용지크기, 머리글, 바닥글 등도 설정할 수 있답니다.")여백을 지정하시고(2.여백설정) 확인을 클릭하면 설정끝!(3.확인) 그리고 인쇄를 누르시면 되겠죠.(4.인쇄) 폰트를 바꾸거나, 소개해드린 것 이상의 설정을 원하신다면, 한글편집기를 사용하시는게 나을 겁니다. [<sup>3</sup>](#note-36-3 "더 세부적인 설정을 할 수 있도록 웨페이지에 기능을 추가하는 것에 대한 것도 고려했습니다. 하지만 그러기 위해서는 사용자들이 출력할 때 설치파일을 다운받고 설치를 하는 등의 너무 불필요한 과정도 필요하게 됩니다.")
   
 
 
