--- a/_posts/2009-05-24-웹마스터의-노가다와-수작업의-비효율성-2.md
+++ b/_posts/2009-05-24-웹마스터의-노가다와-수작업의-비효율성-2.md
@@ -22,7 +22,7 @@ tags:
 
 제가 처음 레프트21 일을 하면서 엄청난 충격을 받았던 것은 바로 웹에 기사를 입력하는 것 때문이었습니다. 보통은 프로페셔널한 작업 과정을 상상하면서, 대체로 자동화된 과정을 생각하실거라 봅니다. 저도 그랬습니다.
 
-그런데 그게 아니었습니다. 일일이 손으로 입력하는 일명, ‘노가다’였습니다. [<sup>1</sup>](#note-65-1 "‘노가다’라는 말이 건설 노동자를 폄하하는 말이라는 지적이 있어왔죠. 하지만, 일반적으로 단순반복작업을 재밌게 표현할 때도 이 말을 사용하는 것이 일반적이라, 그런 의미로 한정해 사용합니다. 저는 건설 노동자를 폄하하지 않으며 그들의 투쟁을 특히나 적극 지지합니다."){#return-note-65-1.simple-footnote}
+그런데 그게 아니었습니다. 일일이 손으로 입력하는 일명, ‘노가다’였습니다. [<sup>1</sup>](#note-65-1 "‘노가다’라는 말이 건설 노동자를 폄하하는 말이라는 지적이 있어왔죠. 하지만, 일반적으로 단순반복작업을 재밌게 표현할 때도 이 말을 사용하는 것이 일반적이라, 그런 의미로 한정해 사용합니다. 저는 건설 노동자를 폄하하지 않으며 그들의 투쟁을 특히나 적극 지지합니다.")
 
 ## 정치적 고민과 생산성
 
