--- a/_posts/2009-06-27-구글-맞춤검색cse-서비스-시작.md
+++ b/_posts/2009-06-27-구글-맞춤검색cse-서비스-시작.md
@@ -31,9 +31,9 @@ tags:
 
 레프트21 홈페이지를 기획한 저는, 웹 전체에서 검색 서비스가 핵심이 돼가는 추세라는 점과 레프트21의 특성이 양질의 자료를 풍부하게 보유하고 있다는 점임을 감안해서 검색을 강조했습니다. 이 기획이 옳았는지는 앞으로 더 긴 기간을 두고 검증해 봐야 할 것입니다.
 
-그런데 검색을 강조한다고 했지만 문제가 있었습니다. 왠걸, 레프트21의 검색엔진(?) [<sup>1</sup>](#note-97-1 "엔진이라고 할 수준이 아니기 때문에;;"){#return-note-97-1.simple-footnote}은 매우 취약했습니다. 상세검색 [<sup>2</sup>](#note-97-2 "상세검색도 조만간 달 것입니다."){#return-note-97-2.simple-footnote}조차 시간에 쫓겨서 못 달았습니다. 즉, 그동안 레프트21 인덱스 화면의 상태는, ‘허울좋은 검색 강조’였다고 할 수 있습니다. 다양한 검색 기능도 제공하지 못하면서 검색을 한다고 말하는 게 말이 안 된다는 거죠.
+그런데 검색을 강조한다고 했지만 문제가 있었습니다. 왠걸, 레프트21의 검색엔진(?) [<sup>1</sup>](#note-97-1 "엔진이라고 할 수준이 아니기 때문에;;")은 매우 취약했습니다. 상세검색 [<sup>2</sup>](#note-97-2 "상세검색도 조만간 달 것입니다.")조차 시간에 쫓겨서 못 달았습니다. 즉, 그동안 레프트21 인덱스 화면의 상태는, ‘허울좋은 검색 강조’였다고 할 수 있습니다. 다양한 검색 기능도 제공하지 못하면서 검색을 한다고 말하는 게 말이 안 된다는 거죠.
 
-그러나 이제는 말할 수 있습니다. 레프트21이 검색을 강조한 홈페이지를 만들었다고 말입니다. 실제로 <a href="http://www.google.co.kr/cse/" target="_blank">구글 맞춤검색</a>은 뛰어난 성능으로 레프트21 기사들과 제휴자료들을 검색해줄 것입니다. 이용자가 원하는 내용에 가장 가깝게, 그리고 빠르게 말이죠. 여튼간에 구글이 가진 기술력으로 레프트21 기사들을 검색하는 거니까 일반적인 차원에서는 이거보다 훌륭한 검색을 하기 힘들겠죠. [<sup>3</sup>](#note-97-3 "레프트21에 특화된 검색을 한다면 레프트21에 한해서는 뛰어나다고 말할 수 있겠지만, 검색엔진은 웹 개발의 핵심 중 핵심이라고 불리는 영역입니다. 당장은 초보인 저희로서는 좀 힘들겠죠. ^^"){#return-note-97-3.simple-footnote}
+그러나 이제는 말할 수 있습니다. 레프트21이 검색을 강조한 홈페이지를 만들었다고 말입니다. 실제로 <a href="http://www.google.co.kr/cse/" target="_blank">구글 맞춤검색</a>은 뛰어난 성능으로 레프트21 기사들과 제휴자료들을 검색해줄 것입니다. 이용자가 원하는 내용에 가장 가깝게, 그리고 빠르게 말이죠. 여튼간에 구글이 가진 기술력으로 레프트21 기사들을 검색하는 거니까 일반적인 차원에서는 이거보다 훌륭한 검색을 하기 힘들겠죠. [<sup>3</sup>](#note-97-3 "레프트21에 특화된 검색을 한다면 레프트21에 한해서는 뛰어나다고 말할 수 있겠지만, 검색엔진은 웹 개발의 핵심 중 핵심이라고 불리는 영역입니다. 당장은 초보인 저희로서는 좀 힘들겠죠. ^^")
 
 ## 기본 검색과 <a href="http://www.google.co.kr/cse/" target="_blank">구글 맞춤검색</a>
 
@@ -55,7 +55,7 @@ tags:
 
 ## 기본 검색의 단점과 구글 검색의 장점
 
-그럼 구글 검색을 사용하면 뭐가 좋길래 사용하는가? 한 마디로 말하면 정확하고 빠르기 때문이죠 뭐. 일단, 정확도가 높다고 판단되는 검색결과를 상위에 띄워주는 겁니다. 사용자가 원하는 것이 무엇인지, 이 문서가 좋은 문서인지 등을 판단하기 위해서 구글은 수만 가지의 기준으로 계산을 한다고 합니다. [<sup>4</sup>](#note-97-4 "대표적인 게 페이지랭크 알고리즘이라고 부르는 것인데, 다른 곳에서 링크를 많이 한 페이지일수록 양질의 페이지로 판단하는 것이죠. 인용이 자주 되는 논문을 좋은 논문이라고 생각하는 것에서 착안한 구글의 알고리즘이라고 합니다.(믈론 요샌 죄다 이렇게 하겠지만 말이죠.)"){#return-note-97-4.simple-footnote} 그리고 이런 수만가지의 계산을 세계에서 가장 성능좋은 구글 서버가 계산합니다. [<sup>5</sup>](#note-97-5 "구글 서버는 값싼 컴퓨터를 병렬로 이어붙인 것으로 유명하죠. 구글 창업자들이 새로 나왔지만 상용화되지는 않은, 당시 최신 하드웨어 기술을 사용해 만든 게 기초가 됐다고 합니다. 지금도 계속 이렇게 스스로 서버를 증설하기 때문에 구글은 세계 최대의 컴퓨터 제조업체라고 불릴 정도입니다."){#return-note-97-5.simple-footnote} 기본 검색보다 월등한 면이죠.
+그럼 구글 검색을 사용하면 뭐가 좋길래 사용하는가? 한 마디로 말하면 정확하고 빠르기 때문이죠 뭐. 일단, 정확도가 높다고 판단되는 검색결과를 상위에 띄워주는 겁니다. 사용자가 원하는 것이 무엇인지, 이 문서가 좋은 문서인지 등을 판단하기 위해서 구글은 수만 가지의 기준으로 계산을 한다고 합니다. [<sup>4</sup>](#note-97-4 "대표적인 게 페이지랭크 알고리즘이라고 부르는 것인데, 다른 곳에서 링크를 많이 한 페이지일수록 양질의 페이지로 판단하는 것이죠. 인용이 자주 되는 논문을 좋은 논문이라고 생각하는 것에서 착안한 구글의 알고리즘이라고 합니다.(믈론 요샌 죄다 이렇게 하겠지만 말이죠.)") 그리고 이런 수만가지의 계산을 세계에서 가장 성능좋은 구글 서버가 계산합니다. [<sup>5</sup>](#note-97-5 "구글 서버는 값싼 컴퓨터를 병렬로 이어붙인 것으로 유명하죠. 구글 창업자들이 새로 나왔지만 상용화되지는 않은, 당시 최신 하드웨어 기술을 사용해 만든 게 기초가 됐다고 합니다. 지금도 계속 이렇게 스스로 서버를 증설하기 때문에 구글은 세계 최대의 컴퓨터 제조업체라고 불릴 정도입니다.") 기본 검색보다 월등한 면이죠.
 
 ‘기본 검색’의 알고리즘은 단순합니다. 키워드를 입력하면 본문, 제목, 필자를 모조리 훑어봅니다. 맞는 게 있으면 내보냅니다. 6500여 개를 순식간에 읽어보고 결과값을 되돌려보내는 속도가 장난이 아니지만(생각해 보세요. 사람이 읽으면 한 달도 더 걸리겠죠.) 광속이 아니란 점이 불만이고, 동시에 정확도순이 아니라 무조건 최신순이라는 점이 불만스럽습니다.
 
