--- a/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
+++ b/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
@@ -29,7 +29,7 @@ tags:
   </p>
 </div>
 
-이런 상황이기 때문에, 구글 검색 [<sup>1</sup>](#note-183-1 "세계 최고 구글의 검색엔진을 활용해서 레프트21을 검색하는 건 좋은 일이겠죠? ^^"){#return-note-183-1.simple-footnote}을 활용해 레프트21을 검색한다면 다양한 것을 할 수 있습니다. 아래 검색창을 이용해 보세요.
+이런 상황이기 때문에, 구글 검색 [<sup>1</sup>](#note-183-1 "세계 최고 구글의 검색엔진을 활용해서 레프트21을 검색하는 건 좋은 일이겠죠? ^^")을 활용해 레프트21을 검색한다면 다양한 것을 할 수 있습니다. 아래 검색창을 이용해 보세요.
 
 <fieldset style="padding: 20px;">
   <legend style="padding:2px; font-size: 14px; font-weight: bold;">구글로 레프트21 검색하기</legend>
