--- a/_posts/2010-03-01-ie6-사망선고-운동에-동참하며.md
+++ b/_posts/2010-03-01-ie6-사망선고-운동에-동참하며.md
@@ -22,7 +22,7 @@ tags:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile22.uf.147EDC5A4D0847472DC86F.jpg" class="aligncenter" width="540" height="300" alt="" />
 
-그런데 이 익스플로러는 다른 브라우저에 비해 성능이 현저히 떨어집니다. 최근에 발표된 익스플로러8에 와서는 성능을 많이 따라잡았지만, 한국에서 가장 대중적으로 사용되는 6의 경우에는 성능이 정말 현저히! 현저히 떨어집니다. 보안에 취약한 건 말할 필요도 없죠. 얼마 전 중국에서 gmail이 해킹됐을 때, 중국 해커들은 익스플로러의 취약점을 통해 해킹했다고 합니다. 때문에 독일 정부는 익스플로러를 사용하지 말라고 권고하기도 했죠. [<sup>1</sup>](#note-211-1 "유럽이 MS를 견제하는 것의 일환이기도 했겠습니다만, 아무 껀덕지가 없이 이런 권고를 할 수는 없는 것이죠."){#return-note-211-1.simple-footnote}
+그런데 이 익스플로러는 다른 브라우저에 비해 성능이 현저히 떨어집니다. 최근에 발표된 익스플로러8에 와서는 성능을 많이 따라잡았지만, 한국에서 가장 대중적으로 사용되는 6의 경우에는 성능이 정말 현저히! 현저히 떨어집니다. 보안에 취약한 건 말할 필요도 없죠. 얼마 전 중국에서 gmail이 해킹됐을 때, 중국 해커들은 익스플로러의 취약점을 통해 해킹했다고 합니다. 때문에 독일 정부는 익스플로러를 사용하지 말라고 권고하기도 했죠. [<sup>1</sup>](#note-211-1 "유럽이 MS를 견제하는 것의 일환이기도 했겠습니다만, 아무 껀덕지가 없이 이런 권고를 할 수는 없는 것이죠.")
 
 저는 평소에 구글에서 만든 웹브라우저인 <a href="http://www.google.com/chrome" target="_blank">크롬</a>을 주로 사용합니다. 웹사이트를 만들 때는 모질라라는 비영리재단에서 만든 <a href="http://www.mozilla.or.kr/ko/" target="_blank">파이어폭스</a>를 주력 브라우저로 사용합니다. 크롬은 정말 빠릅니다. 파이어폭스는 다양한 부가기능이 장점입니다.
 
