--- a/_posts/2010-04-11-레프트21-기후정의-토론회-생중계.md
+++ b/_posts/2010-04-11-레프트21-기후정의-토론회-생중계.md
@@ -47,7 +47,7 @@ tags:
 하나는 실제 트위터 생중계를 진행한 <a href="http://twitonair.com/" p="" class="broken_link">twitonair</a> 사이트였고, 두 군데가 더 있었어요. 그런데 사이트 주소는 기억이 안 나요 ㅋㅋ 편의상 사이트2 사이트3고 하죠. 
 
   * 사이트2 : 아이폰으로만 생중계를 지원하는 사이트였죠. 아이폰이 없으므로 패스~
-  * 사이트3 : twitonair보다 화질이 더 좋았습니다. 그런데 영어 [<sup>1</sup>](#note-217-1 "저는 영어를 잘 읽을 줄 앙아요. 하이 에브리바디 헬로~ 하와유? 아임 파인 땡큐 엔유? 자자 봐요. 하지만 독자들 모두가 영어를 잘 할 거라고 생각할 수는 없잖아요?"){#return-note-217-1.simple-footnote} OTL;;
+  * 사이트3 : twitonair보다 화질이 더 좋았습니다. 그런데 영어 [<sup>1</sup>](#note-217-1 "저는 영어를 잘 읽을 줄 앙아요. 하이 에브리바디 헬로~ 하와유? 아임 파인 땡큐 엔유? 자자 봐요. 하지만 독자들 모두가 영어를 잘 할 거라고 생각할 수는 없잖아요?") OTL;;
 
 자, 그래서 twitonair에서 트위터 생중계를 하기로 결정했죠. 
 
@@ -55,7 +55,7 @@ tags:
 
 그 다음 문제는 카메라 자체의 화질이었어요. 
 
-저는 트위터 생중계를 위해서 큰맘먹고 웹캠을 하나 구입했어요. [<sup>2</sup>](#note-217-2 "여자친구랑 화상통화를 하려고 구입한 게 아니예요. 정말이예요."){#return-note-217-2.simple-footnote} 후진 제 노트북에는 웹캠이 기본장착돼 있지 않거든요. 구입한 웹캠은, 무려 MS의 VX-1000! 네이버 지식쇼핑에서 찾아 보니 11000원에 팔길래 부담없이 구입했죠. ㅋㅋ 제가 리눅스를 사용하기 때문에 리눅스와의 호환성도 고려한 것이랍니다. ^^ 
+저는 트위터 생중계를 위해서 큰맘먹고 웹캠을 하나 구입했어요. [<sup>2</sup>](#note-217-2 "여자친구랑 화상통화를 하려고 구입한 게 아니예요. 정말이예요.") 후진 제 노트북에는 웹캠이 기본장착돼 있지 않거든요. 구입한 웹캠은, 무려 MS의 VX-1000! 네이버 지식쇼핑에서 찾아 보니 11000원에 팔길래 부담없이 구입했죠. ㅋㅋ 제가 리눅스를 사용하기 때문에 리눅스와의 호환성도 고려한 것이랍니다. ^^ 
 
 그런데 이 카메라의 화질은, 30만 화소. 흠&#8230; 보통 요즘 웹캠들은 130만 화소더라고요. 그래서 제 웹캠으로 촬영을 하니까 화질이 구리구리했어요. 하지만! 이 웹캠으로 확실히 테스트한 게 있죠. twitonair 사용법을 확실히 익힐 수 있었어요. 생각보다 쉬웠어요. 말 그대로, 카메라를 연결하고, twitonair에서 방송하기를 클릭하고, 설정을 하니까 바로 방송이 되더라고요. ^^ 트위터로 생중계 해 보고 싶은 분들은 참고하세요. 
 
