--- a/_posts/2010-05-02-기술발전과-통제능력의-강화에-대한-단상.md
+++ b/_posts/2010-05-02-기술발전과-통제능력의-강화에-대한-단상.md
@@ -86,7 +86,7 @@ tags:
 
 다음, 국가의 감청 기술을 무력화할 수 있는 기본적인 방법들이 있습니다. 국가의 감시를 힘들게 만들고 싶은 분들은 다음 방법을 활용하세요. 
 
-  1. 이메일은 <a href="http://gmail.com/" target="_blank">gmail</a>처럼 https를 기본으로 설정한 것을 쓰세요. [<sup>1</sup>](#note-225-1 "https를 지원하는 메일인 경우에도 사용자가 활성화하지 않으면 https 모드를 사용하지 않는 경우가 있습니다. 자신의 이메일을 바꾸고 싶지 않다면 우선 사용하는 메일 서비스가 https를 지원하는지 살펴보시고 지원하는데 활성화되있지 않다면 활성화하세요."){#return-note-225-1.simple-footnote} 국내 메일 서비스들보다는 안전합니다. gmail처럼 HTTPS를 지원하는 메일은 패킷 감청을 해도 내용을 알아볼 수 없습니다. 
+  1. 이메일은 <a href="http://gmail.com/" target="_blank">gmail</a>처럼 https를 기본으로 설정한 것을 쓰세요. [<sup>1</sup>](#note-225-1 "https를 지원하는 메일인 경우에도 사용자가 활성화하지 않으면 https 모드를 사용하지 않는 경우가 있습니다. 자신의 이메일을 바꾸고 싶지 않다면 우선 사용하는 메일 서비스가 https를 지원하는지 살펴보시고 지원하는데 활성화되있지 않다면 활성화하세요.") 국내 메일 서비스들보다는 안전합니다. gmail처럼 HTTPS를 지원하는 메일은 패킷 감청을 해도 내용을 알아볼 수 없습니다. 
   2. 해외 메일 서비스를 이용하는 게 더 유리합니다. 국내 메일 서비스는 국가가 회사에 내용을 요청하면 그만입니다. 예컨대 해외 메일들 중 gmail 같은 경우는 이메일을 저장하는 서버가 서버도 모두 미국에 있기 때문에 구글 한국지사의 서버를 압수수색해 봤자 소용없습니다. ms live 메일은 서버가 어디 있는지 모르겠습니다.
   3. 단, 해외 메일을 사용할 때 암호를 국내 서비스들의 암호와 다른 것으로 하세요. 아무리 해외 메일의 보안 기술이 뛰어나도 경찰이 당신의 naver 비밀번호를 해외 메일 비밀번호에 입력했을 때 로그인이 되면 끝입니다. 
   4. 해외 이메일들은 대체로 주민등록번호를 묻지 않기 때문에 &nbsp;기본적으로 익명입니다.(gmail 경우는 종종 핸드폰 번호를 물어 보기도 하는데, 어느 경우인지는 잘 모르겠습니다.)
