--- a/_posts/2011-02-14-특별이슈-페이지-―-기존-디자인의-일관성을-해치지.md
+++ b/_posts/2011-02-14-특별이슈-페이지-―-기존-디자인의-일관성을-해치지.md
@@ -59,7 +59,7 @@ tags:
 
 즉, 전략의 출발점은 친숙도를 해치지 않는 것으로부터 시작되야 한다는 것입니다. 왜 그럴까요? 강조를 더 화끈하게 할 수록 사람들이 더 집중해서 볼 수 있지 않을까요? 그렇지 않습니다. 
 
-사람들은 익숙한 홈페이지의 레이아웃을 무의식중에 머리속으로 인식하고 있습니다. 그 인식정보를 바탕으로 홈페이지를 순식간에 훑어봅니다(읽는게 아니라). 이것은 불과 몇초도 걸리지 않는 과정입니다.  <span style="font-weight: bold;">사용자들의 이런 습관을 잘 활용한다면 디자인의 일관성을 해치지 않으면서도 작은 변화로도 충분히 강조를 줄 수 있습니다.</span> 그래서 제이콥 닐슨은 디자인을 혁신적으로 바꿨을 경우 사용자들이 혼란 [<sup>1</sup>](#note-271-1 "물론 모든 경우에 혁신적 재설계를 거부하는 것은 옳지 않습니다. 너무 오래되고 낡아 사용성에 문제가 많은 홈페이지는 사람들이 좀더 익숙하게 느끼는 디자인으로 새롭게 빠꿔야 할 수 도 있겠죠."){#return-note-271-1.simple-footnote}에 빠질 것이라고 경고합니다.
+사람들은 익숙한 홈페이지의 레이아웃을 무의식중에 머리속으로 인식하고 있습니다. 그 인식정보를 바탕으로 홈페이지를 순식간에 훑어봅니다(읽는게 아니라). 이것은 불과 몇초도 걸리지 않는 과정입니다.  <span style="font-weight: bold;">사용자들의 이런 습관을 잘 활용한다면 디자인의 일관성을 해치지 않으면서도 작은 변화로도 충분히 강조를 줄 수 있습니다.</span> 그래서 제이콥 닐슨은 디자인을 혁신적으로 바꿨을 경우 사용자들이 혼란 [<sup>1</sup>](#note-271-1 "물론 모든 경우에 혁신적 재설계를 거부하는 것은 옳지 않습니다. 너무 오래되고 낡아 사용성에 문제가 많은 홈페이지는 사람들이 좀더 익숙하게 느끼는 디자인으로 새롭게 빠꿔야 할 수 도 있겠죠.")에 빠질 것이라고 경고합니다.
 
 이런 사용성에 관한 분석을 바탕으로 특별이슈 페이지를 만들었습니다. 상단에 강조할 집중이슈의 제목과 기사의 제목, 그리고 사진을 시원시원하게 배치했습니다. 기존의 디자인 훼손을 최소화하기 위해 나머지 부분은 기존과 같은 구조를 유지했습니다. 아래 그림과 같이 말이죠. 
 
