--- a/_posts/2014-08-25-아이콘-닮은꼴-상징-제멋대로.md
+++ b/_posts/2014-08-25-아이콘-닮은꼴-상징-제멋대로.md
@@ -11,19 +11,19 @@ permalink: /archives/435
 
 사용성을 해치거나 알아보기 힘든 아이콘이 많다. 대략적으로 분류해보면 어떤 아이콘이 왜 더 쉽게 알아볼 수 있는지 이해할 수 있다.
 
-## 닮은꼴 아이콘(Resemblance Icons) {#resemblanceicons}
+## 닮은꼴 아이콘(Resemblance Icons) 
 
   * 실제 사물을 묘사.
   * 예: 이메일을 나타내는 봉투 아이콘
   * 난점: 작은 경우 닮게 디자인하기 어렵다
 
-## 상징적인 아이콘(Reference Icons) {#referenceicons}
+## 상징적인 아이콘(Reference Icons) 
 
   * 어떤 개념을 상징하거나 비유하는 사물을 묘사
   * 예: 죔쇠로 압축을 상징하는 압축 프로그램 아이콘.
   * 난점: 사물과 개념을 사람들이 잘 연결지을 수 있어야 한다.
 
-## 제멋대로 아이콘(Arbitrary Icons) {#arbitraryicons}
+## 제멋대로 아이콘(Arbitrary Icons) 
 
   * 오로지 관습만으로 굳어진 아이콘
   * 예: 교통 표지판. 경고를 나타내는 노란색 삼각형. 도움말을 나타내는 물음표
