--- a/_posts/2015-05-06-첫-화면-개편-더-시원한-사진-사용-주제별-기사-배치.md
+++ b/_posts/2015-05-06-첫-화면-개편-더-시원한-사진-사용-주제별-기사-배치.md
@@ -13,7 +13,7 @@ categories:
 
 이번 포스트에선 첫 화면을 개편한 취지와 무엇이 바뀌었는지를 자세히 소개하고자 합니다.
 
-## 개편 취지 {#개편-취지}
+## 개편 취지 
 
 모든 신문은 자신이 보기에 무엇이 더 중요하고 덜 중요하지를 편집으로 드러내려 합니다.
 
@@ -29,7 +29,7 @@ categories:
 
 〈노동자 연대〉 사이트의 기존 첫 화면은 3단 구성이었고 편집은 주로 가운데 단의 기사 배치 순서와 제목 크기로 표현됐습니다. 나머지 양쪽 단은 대체로 기사의 종류(독자편지, 최신 온라인 기사, 리뷰, 칼럼, 기획연재 등)를 기준으로 구성됐습니다.
 
-### 편집의 한계 {#편집의-한계}
+### 편집의 한계 
 
 그러나 배치 순서와 제목 크기 만으로는 편집 의도를 충분히 드러내지 못하는 상황이 종종 있었습니다. 예컨대 몇 호에 걸쳐 특정 쟁점을 강조하면서도, 현재 호의 표제 기사도 함께 보여줘야 할 때가 있습니다. 또는 쟁점별로 강조의 차이가 미묘할 때도 있습니다.
 
@@ -53,7 +53,7 @@ categories:
 
 그래서 더 유연하고 입체적인 편집이 가능하게 첫 화면을 재구성하기로 결정했습니다.
 
-### 기사들 사이의 연관성 표현 {#기사들-사이의-연관성-표현}
+### 기사들 사이의 연관성 표현 
 
 기사들 사이의 연관성이 더 뚜렷하게 드러났으면 좋겠다는 바람도 있었습니다. 물론 기존 첫 화면에서도 기사 아래에 관련 기사를 나열해서 연관성을 표현하기는 했습니다.
 
@@ -67,7 +67,7 @@ categories:
 
 그러나 그 기사를 묶는 주제를 명시적으로 드러낸 것은 아니었습니다. 연관성은 있지만 비중이 커서 다른 기사에 딸려 있는 것으로 표현하는 것이 적절하지 않은 경우도 있었습니다.
 
-### 디자인 {#디자인}
+### 디자인 
 
 기존 첫 화면의 디자인은 2009년에 나온 것입니다. 당시에는 깔끔하고 멋진 디자인이었지만 지금은 낡아보입니다.
 
@@ -81,7 +81,7 @@ categories:
   </p>
 </div>
 
-## 새로운 첫 화면 구성 {#새로운-첫-화면-구성}
+## 새로운 첫 화면 구성 
 
 새 첫 화면에서는 리뷰, 독자편지, 최신 온라인 기사와 같은 기사 종류별 구분을 과감하게 생략하거나 배치를 조정했습니다. 대신 주제별로 구역을 나눠서 거기에 기사를 배치했습니다.
 
@@ -125,7 +125,7 @@ categories:
   </p>
 </div>
 
-### 유연한 편집 {#유연한-편집}
+### 유연한 편집 
 
 각 구역의 편집은 매우 유연하게 할 수 있게 했습니다. 덕분에 민주노총 총파업과 세월호 쟁점을 거의 비슷하게 강조해야 되는 예외적인 상황에도 대응할 수 있었습니다. 위 사진을 보면 가장 위에 있는 구역에서 총파업 관련 기사와 세월호 관련 기사를 위에 크게 배치하는 식으로 편집 의도를 표현한 것을 보실 수 있을 것입니다.
 
@@ -135,7 +135,7 @@ categories:
 
 자유도가 높아진만큼 편집에 대한 고민도 더 많아졌지만 역동적인 한국 사회에서 어떤 정세가 닥쳐오더라도 잘 대처하리라 기대해봅니다.
 
-## 남은 이야기들 {#남은-이야기들}
+## 남은 이야기들 
 
   * 첫 화면은 일단 개편했지만 두세달에 걸쳐서 사이트 전반을 개편하는 작업을 할 것입니다. 원래는 3월부터 전면 개편 작업을 추진했는데, 첫 화면 개편이 시급해져서 먼저 하게된 것입니다.
   * 관련성 있는 기사들을 더 쉽고 입체적으로 볼 수 있도록 기사 분류 체계등을 재정비하고 나머지 페이지들의 디자인도 현재 첫 화면에 맞춰서 개선할 것입니다.
