--- a/_posts/2009-03-14-속도를-강조한-레프트21-홈페이지.md
+++ b/_posts/2009-03-14-속도를-강조한-레프트21-홈페이지.md
@@ -4,7 +4,7 @@ title: 속도를 강조한 레프트21 홈페이지
 date: 2009-03-14T19:09:16+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=16
+guid: https://webmaster.wspaper.org/archives/16
 permalink: /archives/16
 tistory_id:
   - 5
