--- a/_posts/2009-04-07-자동-저장-문서.md
+++ b/_posts/2009-04-07-자동-저장-문서.md
@@ -4,7 +4,7 @@ title: '‘기사본문 출력하기’ 기능이 추가되었습니다!'
 date: 2009-04-07T12:34:50+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=36
+guid: https://webmaster.wspaper.org/archives/36
 permalink: /archives/36
 tistory_id:
   - 9
