--- a/_posts/2009-05-02-레프트21-홈페이지-맨-하단의-바로가기-목록-활용.md
+++ b/_posts/2009-05-02-레프트21-홈페이지-맨-하단의-바로가기-목록-활용.md
@@ -4,7 +4,7 @@ title: 레프트21 홈페이지 맨 하단의 바로가기 목록 활용
 date: 2009-05-02T19:53:06+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=52
+guid: https://webmaster.wspaper.org/archives/52
 permalink: /archives/52
 tistory_id:
   - 15
