--- a/_posts/2009-05-13-지난-호-보기-개선-그리고-효율적-사회-진보.md
+++ b/_posts/2009-05-13-지난-호-보기-개선-그리고-효율적-사회-진보.md
@@ -4,7 +4,7 @@ title: 지난 호 보기 개선, 그리고 효율적(?) 사회 진보
 date: 2009-05-13T04:58:11+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=54
+guid: https://webmaster.wspaper.org/archives/54
 permalink: /archives/54
 tistory_id:
   - 18
