--- a/_posts/2009-05-17-자바스크립트-링크-개선-웹접근성-강화.md
+++ b/_posts/2009-05-17-자바스크립트-링크-개선-웹접근성-강화.md
@@ -4,7 +4,7 @@ title: 자바스크립트 링크 개선, 웹접근성 강화
 date: 2009-05-17T10:28:08+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=62
+guid: https://webmaster.wspaper.org/archives/62
 permalink: /archives/62
 tistory_id:
   - 19
