--- a/_posts/2009-05-24-웹마스터의-노가다와-수작업의-비효율성-2.md
+++ b/_posts/2009-05-24-웹마스터의-노가다와-수작업의-비효율성-2.md
@@ -4,7 +4,7 @@ title: 웹마스터의 ‘노가다’와 수작업의 비효율성
 date: 2009-05-24T13:54:40+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=65
+guid: https://webmaster.wspaper.org/archives/65
 permalink: /archives/65
 tistory_id:
   - 22
