--- a/_posts/2009-06-01-레프트21-맞춤보기-개선.md
+++ b/_posts/2009-06-01-레프트21-맞춤보기-개선.md
@@ -4,7 +4,7 @@ title: 레프트21 맞춤보기 개선
 date: 2009-06-01T05:17:31+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=78
+guid: https://webmaster.wspaper.org/archives/78
 permalink: /archives/78
 tistory_id:
   - 24
