--- a/_posts/2009-06-03-레프트21-검색기능-개선-제한적인유의어-자동-검색.md
+++ b/_posts/2009-06-03-레프트21-검색기능-개선-제한적인유의어-자동-검색.md
@@ -4,7 +4,7 @@ title: '레프트21 검색기능 개선 - (제한적인)유의어 자동 검색'
 date: 2009-06-03T13:49:29+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=85
+guid: https://webmaster.wspaper.org/archives/85
 permalink: /archives/85
 tistory_id:
   - 25
