--- a/_posts/2009-06-21-검색-후-2페이지-가면-에러가-났었다-한글-링크-문제.md
+++ b/_posts/2009-06-21-검색-후-2페이지-가면-에러가-났었다-한글-링크-문제.md
@@ -4,7 +4,7 @@ title: 검색 후 2페이지 가면 에러가 났었다(한글URL 문제)
 date: 2009-06-21T16:36:58+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=94
+guid: https://webmaster.wspaper.org/archives/94
 permalink: /archives/94
 tistory_id:
   - 27
