--- a/_posts/2009-06-27-구글-맞춤검색cse-서비스-시작.md
+++ b/_posts/2009-06-27-구글-맞춤검색cse-서비스-시작.md
@@ -4,7 +4,7 @@ title: 구글 맞춤검색(CSE) 서비스 시작
 date: 2009-06-27T14:41:43+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=97
+guid: https://webmaster.wspaper.org/archives/97
 permalink: /archives/97
 tistory_id:
   - 29
