--- a/_posts/2009-07-14-레프트21-홈페이지-인기-메뉴는.md
+++ b/_posts/2009-07-14-레프트21-홈페이지-인기-메뉴는.md
@@ -4,7 +4,7 @@ title: 레프트21 홈페이지 인기 메뉴는?
 date: 2009-07-14T20:09:14+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=105
+guid: https://webmaster.wspaper.org/archives/105
 permalink: /archives/105
 tistory_id:
   - 30
