--- a/_posts/2009-07-21-온라인기사-전체기사-출력기능-추가.md
+++ b/_posts/2009-07-21-온라인기사-전체기사-출력기능-추가.md
@@ -4,7 +4,7 @@ title: 온라인기사, 전체기사 출력기능 추가
 date: 2009-07-21T18:37:36+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=107
+guid: https://webmaster.wspaper.org/archives/107
 permalink: /archives/107
 tistory_id:
   - 31
