--- a/_posts/2009-07-29-기사를-선택해서-인쇄하는-기능-추가.md
+++ b/_posts/2009-07-29-기사를-선택해서-인쇄하는-기능-추가.md
@@ -4,7 +4,7 @@ title: 기사를 선택해서 인쇄하는 기능 추가
 date: 2009-07-29T09:10:18+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=111
+guid: https://webmaster.wspaper.org/archives/111
 permalink: /archives/111
 tistory_id:
   - 32
