--- a/_posts/2009-08-13-독자편지-읽기-화면-하단에-독자편지-목록-출력.md
+++ b/_posts/2009-08-13-독자편지-읽기-화면-하단에-독자편지-목록-출력.md
@@ -4,7 +4,7 @@ title: 독자편지 읽기 화면 하단에 독자편지 목록 출력
 date: 2009-08-13T07:28:50+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=119
+guid: https://webmaster.wspaper.org/archives/119
 permalink: /archives/119
 tistory_id:
   - 35
