--- a/_posts/2009-08-27-이-기사와-같은-주제의-기사-목록-추가.md
+++ b/_posts/2009-08-27-이-기사와-같은-주제의-기사-목록-추가.md
@@ -4,7 +4,7 @@ title: '‘이 기사와 같은 주제의 기사’ 목록 추가'
 date: 2009-08-27T07:46:37+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=121
+guid: https://webmaster.wspaper.org/archives/121
 permalink: /archives/121
 tistory_id:
   - 36
