--- a/_posts/2009-09-07-관련기사의-출처-정보를-명확하게.md
+++ b/_posts/2009-09-07-관련기사의-출처-정보를-명확하게.md
@@ -4,7 +4,7 @@ title: 관련기사의 출처 정보를 명확하게
 date: 2009-09-07T01:34:00+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=123
+guid: https://webmaster.wspaper.org/archives/123
 permalink: /archives/123
 tistory_id:
   - 37
