--- a/_posts/2009-09-18-문맥-관련기사의-출처정보.md
+++ b/_posts/2009-09-18-문맥-관련기사의-출처정보.md
@@ -4,7 +4,7 @@ title: 문맥 관련기사의 출처정보
 date: 2009-09-18T07:10:46+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=125
+guid: https://webmaster.wspaper.org/archives/125
 permalink: /archives/125
 tistory_id:
   - 38
