--- a/_posts/2009-09-29-레프트21-온라인-기사용-rss-추가.md
+++ b/_posts/2009-09-29-레프트21-온라인-기사용-rss-추가.md
@@ -4,7 +4,7 @@ title: 레프트21 온라인 기사용 RSS 추가
 date: 2009-09-29T05:01:07+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=127
+guid: https://webmaster.wspaper.org/archives/127
 permalink: /archives/127
 tistory_id:
   - 40
