--- a/_posts/2009-10-14-구글-아날리틱스-검색-유입을-분명히-감지하기.md
+++ b/_posts/2009-10-14-구글-아날리틱스-검색-유입을-분명히-감지하기.md
@@ -4,7 +4,7 @@ title: 구글 아날리틱스, 검색 유입을 분명히 감지하기
 date: 2009-10-14T02:56:00+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=134
+guid: https://webmaster.wspaper.org/archives/134
 permalink: /archives/134
 tistory_id:
   - 44
