--- a/_posts/2009-10-21-검색창에-커서를-기본으로-놓기.md
+++ b/_posts/2009-10-21-검색창에-커서를-기본으로-놓기.md
@@ -4,7 +4,7 @@ title: 검색창에 커서를 기본으로 놓기
 date: 2009-10-21T01:19:35+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=136
+guid: https://webmaster.wspaper.org/archives/136
 permalink: /archives/136
 tistory_id:
   - 45
