--- a/_posts/2009-10-30-검색창을-커서에-기본으로-놓지-않기.md
+++ b/_posts/2009-10-30-검색창을-커서에-기본으로-놓지-않기.md
@@ -4,7 +4,7 @@ title: 검색창을 커서에 기본으로 놓지 않기
 date: 2009-10-30T08:34:41+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=138
+guid: https://webmaster.wspaper.org/archives/138
 permalink: /archives/138
 tistory_id:
   - 46
