--- a/_posts/2009-11-07-구글-검색을-기본으로-설정했습니다.md
+++ b/_posts/2009-11-07-구글-검색을-기본으로-설정했습니다.md
@@ -4,7 +4,7 @@ title: 구글 검색을 기본으로 설정했습니다
 date: 2009-11-07T16:29:23+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=139
+guid: https://webmaster.wspaper.org/archives/139
 permalink: /archives/139
 tistory_id:
   - 47
