--- a/_posts/2009-11-09-지난-호-보기에서-online-표시-달았고-온라인만-골라-볼-수.md
+++ b/_posts/2009-11-09-지난-호-보기에서-online-표시-달았고-온라인만-골라-볼-수.md
@@ -4,7 +4,7 @@ title: 지난 호 보기에서 online 표시 달았고, 온라인만 골라 볼 
 date: 2009-11-09T07:18:00+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=142
+guid: https://webmaster.wspaper.org/archives/142
 permalink: /archives/142
 tistory_id:
   - 48
