--- a/_posts/2009-11-10-경축-레프트21-웹마스터-블로그-1만-히트.md
+++ b/_posts/2009-11-10-경축-레프트21-웹마스터-블로그-1만-히트.md
@@ -4,7 +4,7 @@ title: '[경축] 레프트21 웹마스터 블로그 1만 히트!'
 date: 2009-11-10T14:29:26+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=150
+guid: https://webmaster.wspaper.org/archives/150
 permalink: /archives/150
 tistory_id:
   - 50
