--- a/_posts/2009-11-10-지난-호-보기-버튼으로-강조.md
+++ b/_posts/2009-11-10-지난-호-보기-버튼으로-강조.md
@@ -4,7 +4,7 @@ title: 지난 호 보기, 버튼으로 강조
 date: 2009-11-10T09:22:41+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=145
+guid: https://webmaster.wspaper.org/archives/145
 permalink: /archives/145
 tistory_id:
   - 49
