--- a/_posts/2009-11-18-온라인-기사-체크-로직-개선.md
+++ b/_posts/2009-11-18-온라인-기사-체크-로직-개선.md
@@ -4,7 +4,7 @@ title: 온라인 기사 체크 로직 개선
 date: 2009-11-18T08:10:37+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=152
+guid: https://webmaster.wspaper.org/archives/152
 permalink: /archives/152
 tistory_id:
   - 51
