--- a/_posts/2009-11-28-익스플로러에서-파비콘이-나오도록-했음.md
+++ b/_posts/2009-11-28-익스플로러에서-파비콘이-나오도록-했음.md
@@ -4,7 +4,7 @@ title: 익스플로러에서 파비콘이 나오게 했음
 date: 2009-11-28T17:08:48+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=155
+guid: https://webmaster.wspaper.org/archives/155
 permalink: /archives/155
 tistory_id:
   - 52
