--- a/_posts/2009-12-08-칼럼기획연재집중이슈-모아서-뽑기.md
+++ b/_posts/2009-12-08-칼럼기획연재집중이슈-모아서-뽑기.md
@@ -4,7 +4,7 @@ title: 칼럼,기획연재,집중이슈 모아서 뽑기
 date: 2009-12-08T07:39:05+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=160
+guid: https://webmaster.wspaper.org/archives/160
 permalink: /archives/160
 tistory_id:
   - 53
