--- a/_posts/2009-12-14-인쇄할-때-스타일을-마음대로-고르자.md
+++ b/_posts/2009-12-14-인쇄할-때-스타일을-마음대로-고르자.md
@@ -4,7 +4,7 @@ title: 인쇄할 때 스타일을 마음대로 고르자
 date: 2009-12-14T05:23:35+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=169
+guid: https://webmaster.wspaper.org/archives/169
 permalink: /archives/169
 tistory_id:
   - 54
