--- a/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
+++ b/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
@@ -4,7 +4,7 @@ title: '구글 검색으로 <레프트21> 검색하기'
 date: 2009-12-22T14:17:55+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=183
+guid: https://webmaster.wspaper.org/archives/183
 permalink: /archives/183
 tistory_id:
   - 58
