--- a/_posts/2009-12-30-목록의-기사-제목을-긁기-쉽게-만들었습니다.md
+++ b/_posts/2009-12-30-목록의-기사-제목을-긁기-쉽게-만들었습니다.md
@@ -4,7 +4,7 @@ title: 기사 목록에서 허공을 클릭해도 기사로 들어가던 문제 
 date: 2009-12-30T13:36:30+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=187
+guid: https://webmaster.wspaper.org/archives/187
 permalink: /archives/187
 tistory_id:
   - 57
