--- a/_posts/2010-07-27-레프트21-사진-갤러리.md
+++ b/_posts/2010-07-27-레프트21-사진-갤러리.md
@@ -4,7 +4,7 @@ title: 레프트21 갤러리
 date: 2010-07-27T08:39:33+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=233
+guid: https://webmaster.wspaper.org/archives/233
 permalink: /archives/233
 tistory_id:
   - 75
