--- a/_posts/2010-08-06-기사-하단의-후원-링크-그리고-페이스북-퍼가기-버튼.md
+++ b/_posts/2010-08-06-기사-하단의-후원-링크-그리고-페이스북-퍼가기-버튼.md
@@ -4,7 +4,7 @@ title: 기사 하단의 후원 링크, 그리고 페이스북 퍼가기 버튼
 date: 2010-08-06T02:49:48+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=243
+guid: https://webmaster.wspaper.org/archives/243
 permalink: /archives/243
 tistory_id:
   - 76
