--- a/_posts/2010-11-24-인쇄페이지에-이미지넣기기능-추가했습니다.md
+++ b/_posts/2010-11-24-인쇄페이지에-이미지넣기기능-추가했습니다.md
@@ -4,7 +4,7 @@ title: '인쇄페이지에 ‘이미지넣기’기능 추가했습니다.'
 date: 2010-11-24T08:32:23+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=266
+guid: https://webmaster.wspaper.org/archives/266
 permalink: /archives/266
 tistory_id:
   - 80
