--- a/_posts/2011-02-14-특별이슈-페이지-―-기존-디자인의-일관성을-해치지.md
+++ b/_posts/2011-02-14-특별이슈-페이지-―-기존-디자인의-일관성을-해치지.md
@@ -4,7 +4,7 @@ title: 특별이슈 페이지 ― 기존 디자인의 일관성을 해치지 않
 date: 2011-02-14T10:30:40+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=271
+guid: https://webmaster.wspaper.org/archives/271
 permalink: /archives/271
 tistory_id:
   - 81
@@ -55,7 +55,7 @@ tags:
   
 > 
 > 
-> <a title="[http://www.oneweb.co.kr/?p=26]로 이동합니다." target="_blank" href="http://www.oneweb.co.kr/?p=26">새로운것 vs. 친숙한 것: 디자인 재설계를 위해서 얼마나 투자해야 할까</a> 
+> <a title="[http://www.oneweb.co.kr/archives/26]로 이동합니다." target="_blank" href="http://www.oneweb.co.kr/archives/26">새로운것 vs. 친숙한 것: 디자인 재설계를 위해서 얼마나 투자해야 할까</a> 
 
 즉, 전략의 출발점은 친숙도를 해치지 않는 것으로부터 시작되야 한다는 것입니다. 왜 그럴까요? 강조를 더 화끈하게 할 수록 사람들이 더 집중해서 볼 수 있지 않을까요? 그렇지 않습니다. 
 
