--- a/_posts/2011-03-19-구글-맞춤-검색-에러로-검색을-일시-변경했습니다.md
+++ b/_posts/2011-03-19-구글-맞춤-검색-에러로-검색을-일시-변경했습니다.md
@@ -4,7 +4,7 @@ title: 구글 맞춤 검색 에러로, 검색을 일시 변경했습니다
 date: 2011-03-19T05:41:15+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=279
+guid: https://webmaster.wspaper.org/archives/279
 permalink: /archives/279
 tistory_id:
   - 84
