--- a/_posts/2011-04-11-마르크스21-광고를-개선했습니다.md
+++ b/_posts/2011-04-11-마르크스21-광고를-개선했습니다.md
@@ -4,7 +4,7 @@ title: 마르크스21 광고를 개선했습니다
 date: 2011-04-11T16:31:56+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=286
+guid: https://webmaster.wspaper.org/archives/286
 permalink: /archives/286
 tistory_id:
   - 87
