--- a/_posts/2011-10-06-레프트21-모바일-―-자세히-살펴보기.md
+++ b/_posts/2011-10-06-레프트21-모바일-―-자세히-살펴보기.md
@@ -4,7 +4,7 @@ title: 레프트21 모바일 ― 자세히 살펴보기
 date: 2011-10-06T08:04:13+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=291
+guid: https://webmaster.wspaper.org/archives/291
 permalink: /archives/291
 tistory_id:
   - 89
