--- a/_posts/2013-03-03-레프트21-epub-다운로드-서비스를-중단합니다.md
+++ b/_posts/2013-03-03-레프트21-epub-다운로드-서비스를-중단합니다.md
@@ -4,7 +4,7 @@ title: 레프트21 EPUB 다운로드 서비스를 중단합니다
 date: 2013-03-03T06:55:13+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=330
+guid: https://webmaster.wspaper.org/archives/330
 permalink: /archives/330
 tistory_id:
   - 94
