--- a/_posts/2015-05-06-첫-화면-개편-더-시원한-사진-사용-주제별-기사-배치.md
+++ b/_posts/2015-05-06-첫-화면-개편-더-시원한-사진-사용-주제별-기사-배치.md
@@ -4,7 +4,7 @@ title: '첫 화면 개편 - 더 시원한 사진 사용, 주제별 기사 배치
 date: 2015-05-06T19:31:11+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=453
+guid: https://webmaster.wspaper.org/archives/453
 permalink: /archives/453
 categories:
   - 개발 이야기
