--- a/_posts/2009-03-12-레프트21홈페이지-이용안내-1-맑은-고딕-캠페인.md
+++ b/_posts/2009-03-12-레프트21홈페이지-이용안내-1-맑은-고딕-캠페인.md
@@ -4,7 +4,7 @@ title: '<레프트21> ‘맑은 고딕’에 최적화된 디자인 !!'
 date: 2009-03-12T19:19:11+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=6
+guid: https://webmaster.wspaper.org/archives/6
 permalink: /archives/6
 tistory_id:
   - 3
