--- a/_posts/2009-08-04-도표와-그래프는-인쇄에-나오도록.md
+++ b/_posts/2009-08-04-도표와-그래프는-인쇄에-나오도록.md
@@ -4,7 +4,7 @@ title: 그래프는 인쇄에 나오도록
 date: 2009-08-04T05:33:13+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=115
+guid: https://webmaster.wspaper.org/archives/115
 permalink: /archives/115
 tistory_id:
   - 33
