--- a/_posts/2009-09-29-레프트21-기본검색-빈-검색어-처리.md
+++ b/_posts/2009-09-29-레프트21-기본검색-빈-검색어-처리.md
@@ -4,7 +4,7 @@ title: 레프트21 기본검색 빈 검색어 처리
 date: 2009-09-29T06:18:03+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=129
+guid: https://webmaster.wspaper.org/archives/129
 permalink: /archives/129
 tistory_id:
   - 41
