--- a/_posts/2010-01-07-링크-설명툴팁을-제깍제깍-뜨게-만들다.md
+++ b/_posts/2010-01-07-링크-설명툴팁을-제깍제깍-뜨게-만들다.md
@@ -4,7 +4,7 @@ title: 링크 설명(툴팁)을 제깍제깍 뜨게 만들다
 date: 2010-01-07T14:34:37+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=190
+guid: https://webmaster.wspaper.org/archives/190
 permalink: /archives/190
 tistory_id:
   - 59
