--- a/_posts/2010-01-18-레프트21-기사를-퍼가실-때-이렇게-해-주세요.md
+++ b/_posts/2010-01-18-레프트21-기사를-퍼가실-때-이렇게-해-주세요.md
@@ -4,7 +4,7 @@ title: 레프트21 기사를 퍼가실 때 이렇게 해 주세요~!
 date: 2010-01-18T13:13:23+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=195
+guid: https://webmaster.wspaper.org/archives/195
 permalink: /archives/195
 tistory_id:
   - 61
