--- a/_posts/2010-01-27-다함께가-주최하는-포럼-슬라이드.md
+++ b/_posts/2010-01-27-다함께가-주최하는-포럼-슬라이드.md
@@ -4,7 +4,7 @@ title: 다함께가 주최하는 포럼 슬라이드
 date: 2010-01-27T04:58:20+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=199
+guid: https://webmaster.wspaper.org/archives/199
 permalink: /archives/199
 tistory_id:
   - 62
