--- a/_posts/2010-02-08-기사-보다가-그-기사가-실린-호수로-바로-가기.md
+++ b/_posts/2010-02-08-기사-보다가-그-기사가-실린-호수로-바로-가기.md
@@ -4,7 +4,7 @@ title: 기사 보다가 그 기사가 실린 호수로 바로 가기
 date: 2010-02-08T09:17:53+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=201
+guid: https://webmaster.wspaper.org/archives/201
 permalink: /archives/201
 tistory_id:
   - 64
