--- a/_posts/2010-03-01-ie6-사망선고-운동에-동참하며.md
+++ b/_posts/2010-03-01-ie6-사망선고-운동에-동참하며.md
@@ -4,7 +4,7 @@ title: IE6 사망선고 운동에 동참하며
 date: 2010-03-01T13:35:24+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=211
+guid: https://webmaster.wspaper.org/archives/211
 permalink: /archives/211
 tistory_id:
   - 67
