--- a/_posts/2010-03-29-시시껄렁만-중요하기는-한-자료-구조에-대해.md
+++ b/_posts/2010-03-29-시시껄렁만-중요하기는-한-자료-구조에-대해.md
@@ -4,7 +4,7 @@ title: '시시껄렁하지만 중요한, ‘자료 구조’에 대해'
 date: 2010-03-29T09:27:02+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=214
+guid: https://webmaster.wspaper.org/archives/214
 permalink: /archives/214
 tistory_id:
   - 68
