--- a/_posts/2010-04-15-레프트21의-구글-맞춤검색-동의어-지원-시작.md
+++ b/_posts/2010-04-15-레프트21의-구글-맞춤검색-동의어-지원-시작.md
@@ -4,7 +4,7 @@ title: 레프트21의 구글 맞춤검색 동의어 지원 시작
 date: 2010-04-15T06:12:04+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=218
+guid: https://webmaster.wspaper.org/archives/218
 permalink: /archives/218
 tistory_id:
   - 70
