--- a/_posts/2010-04-23-트위터로-퍼가요-버튼이-생겼어요.md
+++ b/_posts/2010-04-23-트위터로-퍼가요-버튼이-생겼어요.md
@@ -4,7 +4,7 @@ title: 트위터로 퍼가요 버튼이 생겼어요
 date: 2010-04-23T02:56:39+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=221
+guid: https://webmaster.wspaper.org/archives/221
 permalink: /archives/221
 tistory_id:
   - 71
