--- a/_posts/2010-05-02-기술발전과-통제능력의-강화에-대한-단상.md
+++ b/_posts/2010-05-02-기술발전과-통제능력의-강화에-대한-단상.md
@@ -4,7 +4,7 @@ title: 기술발전과 통제능력의 강화에 대한 단상
 date: 2010-05-02T08:12:54+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=225
+guid: https://webmaster.wspaper.org/archives/225
 permalink: /archives/225
 tistory_id:
   - 72
