--- a/_posts/2010-05-23-첫-화면-변경의-이유.md
+++ b/_posts/2010-05-23-첫-화면-변경의-이유.md
@@ -4,7 +4,7 @@ title: 첫 화면 변경의 이유
 date: 2010-05-23T13:31:17+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=226
+guid: https://webmaster.wspaper.org/archives/226
 permalink: /archives/226
 tistory_id:
   - 73
