--- a/_posts/2010-10-01-레프트21-모바일-테스트-페이지.md
+++ b/_posts/2010-10-01-레프트21-모바일-테스트-페이지.md
@@ -4,7 +4,7 @@ title: 레프트21 모바일 테스트 페이지
 date: 2010-10-01T08:51:34+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=247
+guid: https://webmaster.wspaper.org/archives/247
 permalink: /archives/247
 tistory_id:
   - 74
