--- a/_posts/2010-10-13-모두를-위한-웹.md
+++ b/_posts/2010-10-13-모두를-위한-웹.md
@@ -4,7 +4,7 @@ title: 모두를 위한 웹
 date: 2010-10-13T07:39:45+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=257
+guid: https://webmaster.wspaper.org/archives/257
 permalink: /archives/257
 tistory_id:
   - 77
