--- a/_posts/2010-10-21-레프트21-홍보-문구를-블로그에-달아-주세요.md
+++ b/_posts/2010-10-21-레프트21-홍보-문구를-블로그에-달아-주세요.md
@@ -4,7 +4,7 @@ title: 레프트21 홍보 문구를 블로그에 달아 주세요!
 date: 2010-10-21T09:36:53+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=259
+guid: https://webmaster.wspaper.org/archives/259
 permalink: /archives/259
 tistory_id:
   - 78
