--- a/_posts/2010-11-24-현대차-비정규직-파업투쟁을-온라인에서도-홍보해.md
+++ b/_posts/2010-11-24-현대차-비정규직-파업투쟁을-온라인에서도-홍보해.md
@@ -4,7 +4,7 @@ title: 현대차 비정규직 파업투쟁을 온라인에서도 홍보해주세
 date: 2010-11-24T08:33:05+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=268
+guid: https://webmaster.wspaper.org/archives/268
 permalink: /archives/268
 tistory_id:
   - 79
