--- a/_posts/2013-01-25-레프트21-epub-다운로드-서비스-시작.md
+++ b/_posts/2013-01-25-레프트21-epub-다운로드-서비스-시작.md
@@ -4,7 +4,7 @@ title: 레프트21 EPUB 다운로드 서비스 시작
 date: 2013-01-25T12:29:49+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=321
+guid: https://webmaster.wspaper.org/archives/321
 permalink: /archives/321
 tistory_id:
   - 93
