--- a/_posts/2013-03-07-검색-기능이-개선됐습니다.md
+++ b/_posts/2013-03-07-검색-기능이-개선됐습니다.md
@@ -4,7 +4,7 @@ title: 날짜 기준 검색이 가능해졌습니다
 date: 2013-03-07T06:07:31+00:00
 author: 노동자 연대 웹마스터
 layout: post
-guid: https://webmaster.wspaper.org/?p=331
+guid: https://webmaster.wspaper.org/archives/331
 permalink: /archives/331
 tistory_id:
   - 95
