기술공유 url 맞춤

--- a/_posts/2014-08-25-아이콘-닮은꼴-상징-제멋대로.md
+++ b/_posts/2014-08-25-아이콘-닮은꼴-상징-제멋대로.md
@@ -5,7 +5,7 @@ date: 2014-08-25T14:15:58+00:00
 author: 노동자 연대 웹마스터
 layout: post
 guid: 'https://webmaster.wspaper.org/?post_type=devsharing&#038;p=435'
-permalink: /archives/435
+permalink: /archives/devsharing/아이콘-닮은꼴-상징-제멋대로
 ---
 [출처: NNGroup의 Alertbox(2014-08-17)](http://www.nngroup.com/articles/classifying-icons/)
 
