--- a/_posts/2015-03-30-ia-세미나1.md
+++ b/_posts/2015-03-30-ia-세미나1.md
@@ -5,7 +5,7 @@ date: 2015-03-30T20:44:21+00:00
 author: 노동자 연대 웹마스터
 layout: post
 guid: 'https://webmaster.wspaper.org/?post_type=devsharing&#038;p=448'
-permalink: /archives/448
+permalink: /archives/devsharing/ia-세미나1
 ---
 Peter Morville & Louis Rosenfeld의 Information Architecture for the World Wide Web 세미나를 위해 정리한 것입니다.
 
