--- a/_posts/2014-08-25-상품-정보-잘-쓰기.md
+++ b/_posts/2014-08-25-상품-정보-잘-쓰기.md
@@ -5,7 +5,7 @@ date: 2014-08-25T14:18:03+00:00
 author: 노동자 연대 웹마스터
 layout: post
 guid: 'https://webmaster.wspaper.org/?post_type=devsharing&#038;p=436'
-permalink: /archives/436
+permalink: /archives/devsharing/상품-정보-잘-쓰기
 ---
 출처:?<http://www.nngroup.com/articles/product-descriptions/>
 
