--- a/_posts/2014-09-15-alertbox-요약-검색이-있는데-내비게이션이-필요할까.md
+++ b/_posts/2014-09-15-alertbox-요약-검색이-있는데-내비게이션이-필요할까.md
@@ -5,7 +5,7 @@ date: 2014-09-15T12:24:29+00:00
 author: 노동자 연대 웹마스터
 layout: post
 guid: 'https://webmaster.wspaper.org/?post_type=devsharing&#038;p=439'
-permalink: /archives/439
+permalink: /archives/devsharing/alertbox-요약-검색이-있는데-내비게이션이-필요할까
 ---
 원문: <http://www.nngroup.com/articles/search-not-enough>
 
