--- a/_posts/2014-10-07-alertbox-요약-관련-콘텐츠는-제대로-보여줘야-페이지뷰를.md
+++ b/_posts/2014-10-07-alertbox-요약-관련-콘텐츠는-제대로-보여줘야-페이지뷰를.md
@@ -5,7 +5,7 @@ date: 2014-10-07T14:54:30+00:00
 author: 노동자 연대 웹마스터
 layout: post
 guid: 'https://webmaster.wspaper.org/?post_type=devsharing&#038;p=443'
-permalink: /archives/443
+permalink: /archives/devsharing/alertbox-요약-관련-콘텐츠는-제대로-보여줘야-페이지뷰를
 ---
 <a href="http://nngroup.us4.list-manage.com/track/click?u=538d934a891681a5d850bb4e5&id=e401fb34e2&e=32cb419f12" target="_self">Related Content Boosts Pageviews, When Done Right</a>
 
