--- a/_posts/2014-10-07-alertbox-요약-주의를-끌고-이해를-돕는-애니메이션.md
+++ b/_posts/2014-10-07-alertbox-요약-주의를-끌고-이해를-돕는-애니메이션.md
@@ -5,7 +5,7 @@ date: 2014-10-07T14:53:33+00:00
 author: 노동자 연대 웹마스터
 layout: post
 guid: 'https://webmaster.wspaper.org/?post_type=devsharing&#038;p=442'
-permalink: /archives/442
+permalink: /archives/devsharing/alertbox-요약-주의를-끌고-이해를-돕는-애니메이션
 ---
 <a href="http://nngroup.us4.list-manage2.com/track/click?u=538d934a891681a5d850bb4e5&id=736beb47f1&e=32cb419f12" target="_self">Animation for Attention and Comprehension</a>
 
