--- a/_posts/2015-05-17-alertbox-요약-효율성보다-사용자의-기대를-더-중시해야.md
+++ b/_posts/2015-05-17-alertbox-요약-효율성보다-사용자의-기대를-더-중시해야.md
@@ -5,7 +5,7 @@ date: 2015-05-17T23:45:17+00:00
 author: 노동자 연대 웹마스터
 layout: post
 guid: 'https://webmaster.wspaper.org/?post_type=devsharing&#038;p=481'
-permalink: /archives/481
+permalink: /archives/devsharing/alertbox-요약-효율성보다-사용자의-기대를-더-중시해야
 ---
 <div class="content">
   <p>
