--- a/_posts/2009-03-12-레프트21-홈페이지-이용안내.md
+++ b/_posts/2009-03-12-레프트21-홈페이지-이용안내.md
@@ -14,14 +14,14 @@ tags:
   - 노동자 연대
   - 웹마스터
 ---
-<span style="font-size: medium;">드뎌! <a href="www.left21.com" target="_blank" class="broken_link"><레프트21></a>의 홈페이지가 개장했습니다. </span>
+드뎌! &lt;레프트21>의 홈페이지가 개장했습니다.
 
-이번 13일에 새롭게 창간되는<a href="www.left21.com" target="_blank" class="broken_link"><레프트21></a>에 대한 소개는 <a href="www.left21.com" target="_blank" class="broken_link">www.left21.com</a>에 가시면 보실 수 있습니다. 권력과 자본으로부터 철저하게 독립된 우리 언론사의 날카로운 비판을 시원하게 느껴보시기 바랍니다.
+이번 13일에 새롭게 창간되는 <레프트21>에 대한 소개는 www.left21.com에 가시면 보실 수 있습니다. 권력과 자본으로부터 철저하게 독립된 우리 언론사의 날카로운 비판을 시원하게 느껴보시기 바랍니다.
   
 자주 오셔서 기사를 보시는 것 외에도 독자편지를 통해 기고나 토론과 논쟁도 활발히 해주셨으면 하는 바램입니다. 물론 정기구독 강춥니다!!ㅎ
   
-<br style="font-weight: bold;" /><span style="font-weight: bold;">이 블로그는 저희 언론사의 홈페이지를 개발한 웹마스터의 블로그랍니다. </span>
-  
+**이 블로그는 저희 언론사의 홈페이지를 개발한 웹마스터의 블로그랍니다.**
+ 
 독자편지나, 기고를 제외한 홈페이지 이용사항과 관련된 내용은 여기서 정보를 얻어가실 수 있을겝니다. 헤엠!
   
-홈페이지를 방문하신분들은 꼭 한번 읽어주시길 바랍니다. 첫 호는 간단한 개인정보만 적어주시면 무료로 받아보실 수 있답니다.(<a href="http://wspaper.org/event.php" target="_blank" class="broken_link">첫 호 무료받기</a>) 저희 개발자들이 정말 열악한 상황에서 만들었습니다만, 정말 최선을 다했다능.. 부족한 점이 많으니 좋은 충고도 부탁드리고요. 앞으로 많은 관심부탁드립니다.
+홈페이지를 방문하신분들은 꼭 한번 읽어주시길 바랍니다. 첫 호는 간단한 개인정보만 적어주시면 무료로 받아보실 수 있답니다. 저희 개발자들이 정말 열악한 상황에서 만들었습니다만, 정말 최선을 다했다능.. 부족한 점이 많으니 좋은 충고도 부탁드리고요. 앞으로 많은 관심부탁드립니다.
