본문 깨진 거 수정

--- a/_posts/2009-04-07-자동-저장-문서.md
+++ b/_posts/2009-04-07-자동-저장-문서.md
@@ -16,29 +16,18 @@ tags:
   - 인쇄페이지 만들기
   - 인쇄페이지 최적화
 ---
-<div style="border: 2px dotted rgb(221, 221, 221); padding: 5px;">
-  <p>
-    지금 저희는 한층 더 발전된 웹기술을 구현하기 위해 웹 프로그래밍을 배우고 있습니다. 그 때문에 예전부터 해야했었던 작업들이 좀 늦어졌는데요 <a class="simple-footnote" title="저의 기술적 부족도 한 몫 했다능!" id="return-note-36-1" href="#note-36-1"><sup>1</sup></a>. 그 중 프린트 페이지를 드디어 만들었답니다. 아무리 사람의 눈에 최적화된 모니터라고 할지라도, 출력해서 보는 것보다 집중력이 높을 수 없을 겁니다. 특히 장문의 기사라면 더욱 그렇지요. 장문의 기사나, 자료로 활용하기 위해 출력을 하실 수 있도록 했습니다.
-  </p>
-  
-  <p>
-    그냥 알아서 출력하면 되는데 왜 번거롭게 출력페이지를 만드냐굽쇼? 왜냐하면 웹페이지의 화면은 인쇄에 적합한 폰트나 디자인이 아니기 때문입니다. 기사를 출력할 때는 잡다한 이미지나, 로고, 사이드바, 메뉴들은 제외시키고 출력에 필요한 정보 즉, 기사제목, 기자이름, 본문, 기사입력날짜 정도만 출력되면 되겠죠. 바로 인쇄버튼을 클릭하시면 필요없는 정보와 이미지들은 자동으로 제거되어 새창으로 뜨게 됩니다. 기사 본문의 오른쪽 상단에 (아래 그림) 인쇄 버튼을 달아놓았습니다.
-  </p>
-  
-  <p>
-    만약 자신이 뛰어난 드래그 실력과 편집기술을 가지고 있어서 인쇄버튼 따위는 클릭하실 필요가 없다는 생각이 드신다거나, 특별한 편집으로 출력해야하는 경우에는 인쇄버튼 누르시지 마시고 자신이 아는 방법으로 하시면 되겠습니다. 하지만 몇 번의 클릭만으로 깔끔하고, 한글2007로 작업한 듯한 출력물을 손에 넣고 싶다면 인쇄 버튼을 거침없이 클릭하십시요.!
-  </p>
-</div>
+
+지금 저희는 한층 더 발전된 웹기술을 구현하기 위해 웹 프로그래밍을 배우고 있습니다. 그 때문에 예전부터 해야했었던 작업들이 좀 늦어졌는데요 <a class="simple-footnote" title="저의 기술적 부족도 한 몫 했다능!" id="return-note-36-1" href="#note-36-1"><sup>1</sup></a>. 그 중 프린트 페이지를 드디어 만들었답니다. 아무리 사람의 눈에 최적화된 모니터라고 할지라도, 출력해서 보는 것보다 집중력이 높을 수 없을 겁니다. 특히 장문의 기사라면 더욱 그렇지요. 장문의 기사나, 자료로 활용하기 위해 출력을 하실 수 있도록 했습니다.
+
+그냥 알아서 출력하면 되는데 왜 번거롭게 출력페이지를 만드냐굽쇼? 왜냐하면 웹페이지의 화면은 인쇄에 적합한 폰트나 디자인이 아니기 때문입니다. 기사를 출력할 때는 잡다한 이미지나, 로고, 사이드바, 메뉴들은 제외시키고 출력에 필요한 정보 즉, 기사제목, 기자이름, 본문, 기사입력날짜 정도만 출력되면 되겠죠. 바로 인쇄버튼을 클릭하시면 필요없는 정보와 이미지들은 자동으로 제거되어 새창으로 뜨게 됩니다. 기사 본문의 오른쪽 상단에 (아래 그림) 인쇄 버튼을 달아놓았습니다.
+
+만약 자신이 뛰어난 드래그 실력과 편집기술을 가지고 있어서 인쇄버튼 따위는 클릭하실 필요가 없다는 생각이 드신다거나, 특별한 편집으로 출력해야하는 경우에는 인쇄버튼 누르시지 마시고 자신이 아는 방법으로 하시면 되겠습니다. 하지만 몇 번의 클릭만으로 깔끔하고, 한글2007로 작업한 듯한 출력물을 손에 넣고 싶다면 인쇄 버튼을 거침없이 클릭하십시요.
 
 
-
-<div style="width: 310px" class="wp-caption alignright">
-  <img src="https://webmaster.wspaper.org/wp-content/uploads/1/cfile7.uf.1163114A4D0846F51DFC67.jpg" width="300" height="390" alt="<레프트21>의 본문보기 페이지” />
+![](/wp-content/uploads/1/cfile7.uf.1163114A4D0846F51DFC67.jpg)
   
-  <p class="wp-caption-text">
-    본문 오른쪽 상단의 인쇄 버튼을 누르세요
-  </p>
-</div>
+본문 오른쪽 상단의 인쇄 버튼을 누르세요
+
 
 ### 1. 기사 본문 화면
 
@@ -56,13 +45,9 @@ tags:
 
 자 이 창에서도 인쇄버튼이 있죠? 더이상의 설정변경이 필요없다면, 인쇄버튼을 바로 누르시고 출력하시면 됩니다. 하지만 여백을 최소화해서 종이를 절약하고 싶다면, 창 상단의 메뉴에서 <span style="font-weight: bold;">파일 -> 인쇄 미리보기</span> 로 가셔서 여백을 조정할 수 있습니다. 그 방법은 아래에서 설명드리겠어요.
 
-<div style="width: 460px" class="wp-caption aligncenter">
-  <img src="https://webmaster.wspaper.org/wp-content/uploads/1/cfile6.uf.181B1F4C4D0846F541E3C4.jpg" width="450" height="301" alt="<레프트21>의 인쇄페이지” />
-  
-  <p class="wp-caption-text">
-    의 군더더기 없는 깔끔한 인쇄 페이지.
-  </p>
-</div>
+![](https://webmaster.wspaper.org/wp-content/uploads/1/cfile6.uf.181B1F4C4D0846F541E3C4.jpg)
+
+군더더기 없는 깔끔한 인쇄 페이지.
 
 ### 3. 인쇄 설정하기
 
@@ -77,19 +62,16 @@ tags:
 
 
 
-<div style="width: 570px" class="wp-caption aligncenter">
-  <img src="https://webmaster.wspaper.org/wp-content/uploads/1/cfile29.uf.121BE54C4D0846F5334491.jpg" width="560" height="440" alt="인쇄설정하기" />
-  
-  <p class="wp-caption-text">
-    설정 아이콘을 누르면 여백과 출력방향을 조정할 수 있따!
-  </p>
-</div>
+![](https://webmaster.wspaper.org/wp-content/uploads/1/cfile29.uf.121BE54C4D0846F5334491.jpg)
+
+설정 아이콘을 누르면 여백과 출력방향을 조정할 수 있다!
 
 마지막으로 다른 웹페이지 보다 더 깔끔하고 인쇄에 적합한 페이지를 만들기 위해 노력했다고 감히 말씀드립니다. (ㅎㅎ) 먼저 맑은 고딕이나 굴림은 웹페이지 폰트로서는 적합할지 모르나, 장문의 글을 출력해서 보기에는 적합하지 않은 폰트입니다. 따라서 더 적합하면서도 가장 흔하다고 생각된 글자체가 바로 바탕체였습니다. 가장 기본적인 설정에 맞추었다는 말입니다. 
 
 
+![](/wp-content/uploads/1/cfile10.uf.1260EA484D0846F6254FCE.jpg)
 
-<img src="https://webmaster.wspaper.org/wp-content/uploads/1/cfile10.uf.1260EA484D0846F6254FCE.jpg" class="alignright" width="300" height="370" alt="사용자 삽입 이미지" />굳이 다른 언론사랑 비교하자면요, \*겨\*라는 언론사 웹페이지의 기사본문에서 프린트 버튼을 눌렀을 때 나오는 새창입니다. 뭐 대부분 언론사들 웹페이지는 이렇습니다.
+굳이 다른 언론사랑 비교하자면요, \*겨\*라는 언론사 웹페이지의 기사본문에서 프린트 버튼을 눌렀을 때 나오는 새창입니다. 뭐 대부분 언론사들 웹페이지는 이렇습니다.
 
 자세히보면 메인메뉴, 푸터, 사이드바 정도는 제거가 되어있죠. 그런데 폰트는 여전히 굴림입니다. 뭐 굴림이 매우 나빠 도저히 보기 힘든 글자체라고 까지는 할 수 없게지만요, 출력시 신경을 좀 쓴다면 다른 폰트가 더 나은것이 많습니다. 
 
