--- a/_posts/2009-06-03-레프트21-검색기능-개선-제한적인유의어-자동-검색.md
+++ b/_posts/2009-06-03-레프트21-검색기능-개선-제한적인유의어-자동-검색.md
@@ -15,6 +15,7 @@ tags:
   - 노동자 연대 검색 알고리즘
   - 유의어 자동검색
 ---
+
 레프트21의 검색기능은 매우 단순합니다. 웹마스터의 자질이 아직 부족한 탓도 있겠지만, 구글이 <a href="/webmaster/14" target="_blank" title="더 효과적으로 검색기능을 활용하자!" class="broken_link">구글검색엔진을 통해 레프트21의 컨텐츠를 검색할 수 있도록 하는 서비스</a>가 제공되기도 해서 당장 시급히 검색기능을 강화하기보다는 장기적으로 계획을 세워서 만들어야겠다는 생각입니다. 
 
 이해를 돕기 위해 검색기능의 원리를 잠시 설명할게요. 현재 검색시스템은 검색창에 A단어와 B단어를 입력하면 A와 B단어를 모두 포함하고 있는 컨텐츠가 검색이 됩니다. 다르게 말하면 and조건 검색입니다. 따라서 A단어 또는 B단어를(or조건) 포함하고 있는 컨텐츠를 모두 검색하지는 않습니다. 좋은 검색엔진은 and조건과 or조건 모두를 사용하면서도 여러가지 변수를 조합해 가장 연관성이 높게 평가되는 글을 상위에 랭크하는 시스템일 겁니다. 
@@ -27,17 +28,13 @@ tags:
   <img src="/wp-content/uploads/1/cfile6.uf.13291D4E4D084708064A52.jpg" width="560" height="272" alt="사용자 삽입 이미지" />
   
   <p class="wp-caption-text">
-    유의어 단어 검색의
+    유의어 단어 검색의 예
   </p>
 </div>이 외에 ‘트로츠키’도 옛말인 ‘뜨로츠키’, ‘뜨로츠끼’와 함께 검색이 되구요, 그람시도 옛말과 함께 검색하도록 했습니다. 레프트21의 검색엔진에 등록된 유의어는 이 정돕니다. 그렇다면 이 세가지 유의어중 하나와 유의어로 등록되지 않은 단어와 함께 검색했을 경우 어떻게 엔진이 작동할 까요? 
 
-<span style="font-weight: bold;">자본주의와 맑스를 함께 검색했다고 가정</span>하겟습니다. 이 경우 수식으로 쓴다면,</p> 
+<span style="font-weight: bold;">자본주의와 맑스를 함께 검색했다고 가정</span>하겠습니다. 이 경우 수식으로 쓴다면, 
 
-<div style="padding: 10px; background-color: rgb(228, 228, 228); text-align: center;">
-  <p>
     자본주의 and (맑스 or 마르크스) -> 검색결과
-  </p>
-</div>
 
 풀어서 말하면 ‘자본주의’는 반드시 포함되면서 ‘맑스’ 나 ‘마르크스’&nbsp; 중 적어도 하나이상도 함께 포함되어 있는 문서를 검색하게 됩니다. 즉 자본주의만 포함되어 있어나 ‘맑스’ 또는 ‘마르크스’중 하나만 포함되어 있거나 또는 ‘자본주의’는 포함되어있지 않은 문서는 제외되게 됩니다. 왜냐하면 기본 검색 시스템이 and조건 검색이기 때문이죠.
 
