--- a/_posts/2009-07-21-온라인기사-전체기사-출력기능-추가.md
+++ b/_posts/2009-07-21-온라인기사-전체기사-출력기능-추가.md
@@ -23,9 +23,9 @@ tags:
   - 페이지의 주소
   - 후원
 ---
-<레프트21> 10호는 온라인 기사가 많았습니다. 여느 때보다 더욱 많았죠. 심지어 알렉스 캘리니코스 논평, ‘아프가니스탄 전쟁의 정치학’도 온라인 기사로 올라왔습니다.
+&lt;레프트21> 10호는 온라인 기사가 많았습니다. 여느 때보다 더욱 많았죠. 심지어 알렉스 캘리니코스 논평, ‘아프가니스탄 전쟁의 정치학’도 온라인 기사로 올라왔습니다.
 
-독자편지도 아주 많이 들어와서 온라인으로 올라간 것이 무려 7개였습니다. <레프트21> 독자들의 뜨거운 토론 열기를 느낄 수 있죠. ^^
+독자편지도 아주 많이 들어와서 온라인으로 올라간 것이 무려 7개였습니다. &lt;레프트21> 독자들의 뜨거운 토론 열기를 느낄 수 있죠. ^^
 
 예전부터 만들고 싶은데 시간이 없어서 만들지 못하던 기능이 있었습니다. 온라인을 한꺼번에 모아서 출력해버리는 기능이죠.
 
@@ -35,17 +35,17 @@ tags:
 
 또한, 모니터로 기사를 읽는 것보다 출력해서 읽는 것이 훨씬 더 머리에 잘 남죠. 온라인 기사를 좀더 꼼꼼히 읽을 수 있도록 도울 수 있는 것입니다.
 
-## <레프트21>이기에 할 수 있는 서비스
+## &lt;레프트21>이기에 할 수 있는 서비스
 
-이런 류의 과감한 출력 서비스는 사실 <레프트21>이기에 할 수 있는 일입니다.
+이런 류의 과감한 출력 서비스는 사실 &lt;레프트21>이기에 할 수 있는 일입니다.
 
 상업적 언론사들이야 독자들을 좀더 오랜 시간 홈페이지에 붙들어놔야 합니다. 독자들이 홈페이지에 머무는 시간이 길어야 광고를 더 많이 보게 되거든요. 그래서 기사를 한꺼번에 출력할 수 있는 서비스를 만들기는 껄끄러울 것입니다.(물론, 추측입니다.)
 
-하지만 <레프트21>은 광고를 받지 않습니다. 기업주들의 영향을 완전히 배제하기 위한 것이죠.
+하지만 &lt;레프트21>은 광고를 받지 않습니다. 기업주들의 영향을 완전히 배제하기 위한 것이죠.
 
-그래서 생기는 장점이 여러가지이지만, 그 중에도 과감한 출력 서비스를 별 고민없이 할 수 있다는 점은 장점 중에도 장점이라고 생각합니다. **<레프트21>은 오로지 독자들이 기사를 더 꼼꼼히, 그리고 편하게 읽을 수 있으면 대만족**이니까요.
+그래서 생기는 장점이 여러가지이지만, 그 중에도 과감한 출력 서비스를 별 고민없이 할 수 있다는 점은 장점 중에도 장점이라고 생각합니다. **&lt;레프트21>은 오로지 독자들이 기사를 더 꼼꼼히, 그리고 편하게 읽을 수 있으면 대만족**이니까요.
 
-그런만큼, 독자들의 후원이 정말 중요한 언론입니다 <레프트21>은 말이죠. <레프트21>의 이런 정신에 감동하셨다면 지금 당장 **<a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">후원 페이지로 이동</a>**하셔서 후원 클릭하세요! ㅋㅋㅋ
+그런만큼, 독자들의 후원이 정말 중요한 언론입니다 &lt;레프트21>은 말이죠. <레프트21>의 이런 정신에 감동하셨다면 지금 당장 <a target="_blank" href="http://wspaper.org/B_support.php?from=webmasterBlog">후원 페이지로 이동</a>하셔서 후원 클릭하세요! ㅋㅋㅋ
 
 ## 구체적인 방법
 
